# Fiber-level-Detail-Render

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindImGui.cmake
resources/shaders/: default.frag  default.vert  fibers.tesc  fibers.tese  hair.tesc  hair.tese
src/: DirectionalLight.cpp  DirectionalLight.h  ParticleSystem.cpp  ParticleSystem.h  SelfShadows.cpp  SelfShadows.h  ShadowMap.cpp  ShadowMap.h  SimulationEngine.cpp  SimulationEngine.h  WrapDeformer.cpp  WrapDeformer.h  main.cpp
src/Base/: Camera.cpp  Camera.h  Event.h  Framebuffer.cpp  Framebuffer.h  Inputs.cpp  Inputs.h  Logging.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Profiler.cpp  Profiler.h  Resolver.cpp  Resolver.h  Shader.h  Texture2D.cpp  Texture2D.h  Texture3D.cpp  Texture3D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h  bccReader.h
src/Renderer/: Shader.cpp  Shader.h
src/Utils/: FileUtils.cpp  FileUtils.h
src/shaders/: 3DTextureSlice.fs.glsl  catmullRomSpline.tse.glsl  default3D.vs.glsl  fibers.fs.glsl  fibers.gs.glsl  fibers.tsc.glsl  fibers.tse.glsl  fibers.vs.glsl  lambert.fs.glsl  lineAsTube.gs.glsl  lineStripAsTube.gs.glsl  noProjection3D.vs.glsl  selfShadows.fs.glsl  selfShadowsDensity.fs.glsl  shader.fs.glsl  shader.gs.glsl  shader.tsc.glsl  shader.tse.glsl  test3DTexture.fs.glsl  triangulateLine.gs.glsl
src/shaders/utility/: blitTextureChannel.fs.glsl  empty.fs.glsl  fiberNormals.gs.glsl  fullScreen.vs.glsl  solidColor.fs.glsl
